# secure-data-clean-room

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/reference/: README.md  REPORT.md  benchmark.json  controls.csv  inputs.sha256  manifest.sha256  observations.jsonl  summary.csv
docs/: ADR-001-CONSTRAINED-SQL.md  ARCHITECTURE.md  METHODOLOGY.md  THREAT_MODEL.md
fixtures/: policy.json
fixtures/corpus/: queries.json
scripts/: wheel_smoke.py
src/secure_data_clean_room/: __init__.py  api.py  benchmark.py  cli.py  database.py  models.py  policy.py  privacy.py  service.py  settings.py  state.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_cli.py  test_database.py  test_models.py  test_policy.py  test_privacy.py  test_service.py  test_settings.py  test_state.py
web/: app.js  index.html  style.css
