[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "secure-data-clean-room"
version = "0.1.0"
description = "Policy-enforced aggregate analytics over sensitive datasets"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Vincent Plessy" }]
dependencies = [
  "fastapi>=0.116,<1",
  "pydantic>=2.11,<3",
  "sqlglot>=27,<32",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.5,<3",
  "mypy>=1.17,<3",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[project.scripts]
clean-room = "secure_data_clean_room.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/secure_data_clean_room"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["secure_data_clean_room"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["secure_data_clean_room"]
